--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^6.1.2
   flutter_secure_storage: ^10.0.0
   url_strategy: ^0.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
